# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--1.0
#

2004-10-07 21:28:13 GMT	John Goerzen <jgoerzen@complete.org>	patch-48

    Summary:
      More work on syslog
    Revision:
      missingh--head--1.0--patch-48


    modified files:
     ChangeLog


2004-10-07 21:24:05 GMT	John Goerzen <jgoerzen@complete.org>	patch-47

    Summary:
      Fixed handling of PID in syslog
    Revision:
      missingh--head--1.0--patch-47


    modified files:
     ChangeLog libsrc/MissingH/Logging/Handler/Syslog.hs


2004-10-07 21:17:37 GMT	John Goerzen <jgoerzen@complete.org>	patch-46

    Summary:
      Initial development complete
    Revision:
      missingh--head--1.0--patch-46


    modified files:
     ChangeLog


2004-10-07 21:10:37 GMT	John Goerzen <jgoerzen@complete.org>	patch-45

    Summary:
      Initial version of syslog handler
    Revision:
      missingh--head--1.0--patch-45


    new files:
     libsrc/MissingH/Logging/Handler/.arch-ids/=id
     libsrc/MissingH/Logging/Handler/Syslog.hs

    modified files:
     ChangeLog libsrc/MissingH/Logging/Handler.hs

    new directories:
     libsrc/MissingH/Logging/Handler
     libsrc/MissingH/Logging/Handler/.arch-ids


2004-10-07 19:54:47 GMT	John Goerzen <jgoerzen@complete.org>	patch-44

    Summary:
      Checkpointing logging work
    Revision:
      missingh--head--1.0--patch-44


    modified files:
     ChangeLog Makefile libsrc/MissingH/Logging.hs
     libsrc/MissingH/Logging/Handler.hs


2004-10-07 16:12:35 GMT	John Goerzen <jgoerzen@complete.org>	patch-43

    Summary:
      Added initial logging infrastructure
    Revision:
      missingh--head--1.0--patch-43


    new files:
     libsrc/MissingH/Logging.hs
     libsrc/MissingH/Logging/.arch-ids/=id
     libsrc/MissingH/Logging/Handler.hs

    modified files:
     ChangeLog Makefile {arch}/=tagging-method

    new directories: